# sentiment_analysis_infra

./: main.py  pyproject.toml
backend/: .gitignore  app.db  consoleScript.js  pyproject.toml  replies.json
backend/app/: create_tables.py  database.py  main.py
backend/app/api/routers/: analytics.py  manage_database.py  metric_check.py  processing.py  reddit.py  youtube.py
backend/app/core/: database.py
backend/app/ingestion/: google_reviews.py  youtube_scrapper.py
backend/app/lllm/: llm_client.py
backend/app/models/: content.py  content_analysis.py
backend/app/services/analytics/: sentiment_agreement.py  translation_consistency.py
backend/app/services/ingestion/: reddit.py  youtube.py
backend/app/services/llm/: client.py  prompts.py
backend/app/services/nlp/: sentiment.py  similarity.py  translation.py
backend/app/services/processing/: llm_pipeline.py  llm_summarisation.py  youtube_summary.py
backend/app/services/scraping/: reddit.py  youtube.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: loader.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/lib/: api.ts  types.ts
