[project]
name = "mainel"
version = "0.1.0"
description = "Indian Language Transliteration and Translation to English"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "langdetect>=1.0.9",
    "indic-transliteration>=2.3.0",
    "accelerate>=0.25.0",
    "sacremoses>=0.0.53",
    "huggingface-hub>=0.20.0",
]
