[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.59.0",
    "selenium>=4.40.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "webdriver-manager>=4.0.2",
]
